--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  overflow: hidden; 
+}
+
 .main {
   padding: 1rem;
   display: flex;
@@ -24,6 +34,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: .5rem;
   margin-bottom: .5rem;
 }
 
