--- a/src/App.css
+++ b/src/App.css
@@ -33,22 +33,28 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-around;
+  width: 100%;
+  
 }
 
 .preview {
   height: 8rem;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-top: .5rem;
-  margin-bottom: .5rem;
+  margin-bottom: 1.3rem;
+}
+
+.preview img {
+  box-shadow: 0px 3px 15px rgba(0,0,0,0.6);
 }
 
 .print {
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
