--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,20 @@ body {
 
 }
 
+/* Chrome, Safari */
+/*::-webkit-scrollbar {
+  height: 15px;
+}
+::-webkit-scrollbar-track-piece {
+  background-color: #19212c;
+}
+::-webkit-scrollbar-thumb:vertical {
+  height: 30px;
+  width: 5px;
+  border-radius: 10px;
+  background-color: hsl(0, 0%, 70%);
+}*/
+
 .main {
   padding: 1rem;
   display: flex;
