--- a/src/App.css
+++ b/src/App.css
@@ -6,23 +6,21 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden; 
-  background-color: #19212c;
+  background-color: 	hsl(215, 28%, 14%);
 
 }
 
-/* Chrome, Safari */
-/*::-webkit-scrollbar {
-  height: 15px;
+::-webkit-scrollbar {
+  cursor: pointer;
+  width: 14px;
 }
-::-webkit-scrollbar-track-piece {
-  background-color: #19212c;
+
+::-webkit-scrollbar-thumb {
+  border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  border-radius: 9999px;
+  background-color: #AAAAAA;
 }
-::-webkit-scrollbar-thumb:vertical {
-  height: 30px;
-  width: 5px;
-  border-radius: 10px;
-  background-color: hsl(0, 0%, 70%);
-}*/
 
 .main {
   padding: 1rem;
