--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ body {
   border: 4px solid rgba(0, 0, 0, 0);
   background-clip: padding-box;
   border-radius: 9999px;
-  background-color: #AAAAAA;
+  background-color: hsl(0, 0%, 55%);
 }
 
 .main {
