--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ body {
 }
 
 .main {
-  padding: 1rem;
+  /*padding: 0rem 1rem 1rem 1rem;*/
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -41,13 +41,19 @@ body {
   min-height: 100vh;
 }
 
+.tools {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
 .template-picker {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
-  width: 100%;
-  
+  justify-content: center;
 }
 
 .preview {
@@ -57,7 +63,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: .5rem;
+  margin-top: 0.8rem;
   margin-bottom: 1.3rem;
 }
 
@@ -71,4 +77,40 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.settings {
+  width: 100%;
+  height: 225px;
+  overflow-y: scroll;
+}
+
+.settings table {
+  width: 100%;
+}
+
+.settings td {
+  padding: .4rem;
+}
+
+.settings table, tr, td {
+  border: 1px solid rgba(0, 0, 0 ,0.3);
+  border-collapse: collapse;
+}
+.bottom {
+  width: 95%;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 1.2rem;
+  font-size: 0.7rem;
+  opacity: .4;
+  /*https://stackoverflow.com/questions/924916/is-there-a-way-to-make-a-div-unselectable*/
+  user-select: none;
+        -moz-user-select: none;
+        -khtml-user-select: none;
+        -webkit-user-select: none;
+        -o-user-select: none;
 }
