--- a/src/App.css
+++ b/src/App.css
@@ -57,14 +57,14 @@ body {
 }
 
 .preview {
-  height: 8rem;
+  height: 10rem;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-top: 0.8rem;
-  margin-bottom: 1.3rem;
+  margin-bottom: .3rem;
 }
 
 .preview img {
@@ -104,7 +104,6 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-top: 1.2rem;
   font-size: 0.7rem;
   opacity: .4;
   /*https://stackoverflow.com/questions/924916/is-there-a-way-to-make-a-div-unselectable*/
