--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,7 @@ body {
 
 .settings {
   width: 100%;
-  height: 225px;
+  height: 232px;
   overflow-y: scroll;
 }
 
@@ -99,7 +99,8 @@ body {
 }
 
 .settings td {
-  padding: .4rem;
+  /*padding: 1.2rem;*/
+  height: 4rem;
 }
 
 .settings table, tr, td {
