Added options for Singles
When there only is one row with multiple qty!

--- a/src/App.css
+++ b/src/App.css
@@ -82,9 +82,13 @@ body {
 .print {
   width: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: flex-start;
   align-items: center;
+}
+
+.controlls {
+  width: 22%;
 }
 
 .settings {
