--- a/src/App.css
+++ b/src/App.css
@@ -44,15 +44,24 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
   width: 100%;
 }
 
 .template-picker {
+  width: 25%;
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.settings-button {
+  width: 25%;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: flex-end;
 }
 
 .preview {
@@ -76,6 +85,7 @@ body {
 
 .preview img {
   box-shadow: 0px 3px 15px rgba(0,0,0,0.6);
+  border-radius: 11px;
 }
 
 .print {
