--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,20 @@ body {
   width: 22%;
 }
 
+.left {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.right {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+
 .settings {
   width: 100%;
   height: 232px;
