--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,10 @@ body {
   overflow: hidden; 
   background-color: 	hsl(215, 28%, 14%);
   color: hsl(0, 0%, 86%);
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 ::-webkit-scrollbar {
@@ -49,6 +52,15 @@ body {
   width: calc(100vw - 14px);
   padding: 7px 7px;
   border-bottom: 1px solid rgba(0, 0, 0 ,0.3);
+}
+
+.print-load {
+  height: 211px;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .template-picker {
