Fixing issues with starting app after fresh setup..

--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,7 @@ body {
 }
 
 .image-error {
-  width: 22%;
+  width: 26%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -175,16 +175,18 @@ body {
 .dev-tools {
   position: absolute;
   width: 100%;
-  height: 7rem;
-  background-color: rgba(0, 0, 0 ,0.7);
+  height: 8rem;
+  background-color: rgba(0, 0, 0 ,0.9);
   z-index: 1000;
 }
 
 .history {
-  height: 5.3rem;
+  height: 6.3rem;
+  word-wrap: break-word;
   overflow-y: scroll;
   overflow-x: hidden;
   color: #FFF;
+  font-size: 13px;
 }
 
 .ReactCollapse--collapse {
@@ -194,6 +196,10 @@ body {
 
 .history p {
   margin: 0px;
+}
+
+.loading {
+  color: #03b6fc;
 }
 
 .bad {
