--- a/src/App.css
+++ b/src/App.css
@@ -115,6 +115,15 @@ body {
   width: 22%;
 }
 
+.template-info {
+  position: absolute;
+  z-index: -1;
+  font-size: 12px;
+  top: 48px;
+  left: 11px;
+  opacity: .5;
+}
+
 .left {
   display: flex;
   flex-direction: row;
@@ -133,6 +142,7 @@ body {
   width: 100%;
   height: 232px;
   overflow-y: scroll;
+  background-color: 	hsl(215, 28%, 14%);
 }
 
 .settings table {
