--- a/src/main.css
+++ b/src/main.css
@@ -1,20 +1,30 @@
 * {
-    margin: 0;
-    padding: 0;
-  }
+  margin: 0;
+  padding: 0;
+}
 
-  body {
-    overflow: overlay;
-  }
-  
-  ::-webkit-scrollbar {
-    width: 14px;
-  }
-  
-  ::-webkit-scrollbar-thumb {
-    border: 4px solid rgba(0, 0, 0, 0);
-    background-clip: padding-box;
-    border-radius: 9999px;
-    background-color: hsl(0, 0%, 55%);
-  }
-  
+body {
+  overflow: overlay;
+}
+
+.flexGrow {
+  flex-grow: 1;
+}
+
+::-webkit-scrollbar {
+  width: 14px;
+}
+
+::-webkit-scrollbar-thumb {
+  border: 4px solid rgba(0, 0, 0, 0);
+  background-clip: padding-box;
+  border-radius: 9999px;
+  background-color: hsl(0, 0%, 55%);
+}
+
+.unselectable {
+  user-select: none;
+  -webkit-user-select: none; /* Safari 3.1+ */
+  -moz-user-select: none; /* Firefox 2+ */
+  -ms-user-select: none; /* IE 10+ */
+}
