Changed input type to CSV

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,13 @@ html {
   border-radius: 9999px;
   background-color: rgba(255, 255, 255, 0.1);
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* For IE, Edge and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
