--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,15 @@
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 html {
   font-family: 'Raleway', sans-serif;
+}
+
+body {
+  overflow: overlay;
 }
 
 .draggable {
